--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <h2 id="titulo-main">Productos</h2>
                     <div class="login-carrito">
                         <div class="carrito">
-                            <a class="carrito-a">
+                            <a href="https://leozamora.github.io/LeoZamora.CarritoTiendaOnline.github.io/" class="carrito-a">
                                 <i class="bi bi-cart-check-fill"></i>
                                 <span id="cantidad">0</span>
                             </a>
