--- a/index.html
+++ b/index.html
@@ -12,15 +12,20 @@
     <div class="wrapper">
         <aside>
             <header class="wrapper-header">
-                <h1>Exotic Boutique</h1>
-                <a href="index.html" id="icon"><img  src="imgs/icon.jpg" alt="Exotic Boutique"></a>
+                <div class="elem1">                
+                    <h1>Exotic Boutique</h1>
+                    <a href="index.html" id="icon"><img  src="imgs/icon.jpg" alt="Exotic Boutique"></a>
+                </div>
+                <div class="elem2">
+                    <i class="bi bi-list"></i>
+                </div>
             </header>
             <div class="wrapper-index">
                 <ul class="list-index">
                     <li class="item">
                         <button id="all" class="boton-index active"><i class="bi bi-caret-right-fill"></i> Productos</button>
                     </li>
-                    <li>
+                    <li class="item">
                         <button id="cat-01" class="boton-index"><i class="bi bi-caret-right"></i> Camisas</button>
                     </li>
                     <li class="item">
